--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "nodemon": "^1.19.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0"
